[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/epic-anchors/AnchorsPanel/AnchorsPanel.gd" type="Script" id=1]
[ext_resource path="res://addons/epic-anchors/AnchorsPanel/AnchorsMain.gd" type="Script" id=2]
[ext_resource path="res://addons/epic-anchors/AnchorsPanel/Editor.gd" type="Script" id=3]
[ext_resource path="res://addons/epic-anchors/Theme.tres" type="Theme" id=4]
[ext_resource path="res://addons/epic-anchors/AnchorsPanel/AnchorIcon.svg" type="Texture" id=5]
[ext_resource path="res://addons/epic-anchors/AnchorsPanel/TextureModulateButton.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.137255, 0.164706, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.0980392 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0.0313726, 0.0313726, 0.0509804, 0.196078 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0901961, 0.101961, 0.121569, 1 )
draw_center = false
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="BG" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 237.0, 364.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 575.0, 450.0 ]
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -248.0
margin_top = 36.0
margin_right = -72.0
margin_bottom = 308.0
rect_min_size = Vector2( 160, 200 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
hover_col = Color( 0.964706, 0.235294, 0.235294, 1 )
normal_col = Color( 1, 1, 1, 0.0980392 )
text_normal_col = Color( 1, 1, 1, 0.266667 )
hover_highlight_col = Color( 1, 1, 1, 0.0470588 )

[node name="VBX" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 8.0
margin_right = -21.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBX"]
margin_right = 134.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Anchor"
align = 1

[node name="MiddlePart" type="Control" parent="Panel/VBX"]
margin_top = 34.0
margin_right = 134.0
margin_bottom = 171.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullRect" type="Panel" parent="Panel/VBX/MiddlePart"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="Panel/VBX/MiddlePart/FullRect"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 13.0
mouse_filter = 2
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full" type="Panel" parent="Panel/VBX/MiddlePart/FullRect"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 13.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner" type="Control" parent="Panel/VBX/MiddlePart/FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 13.0
margin_right = -13.0
margin_bottom = -13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRight" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterLeft" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -3.5
margin_right = 4.0
margin_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterTop" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRight" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -3.5
margin_right = 4.0
margin_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterBottom" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.0
margin_top = -3.0
margin_right = 4.0
margin_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftWide" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_bottom = 1.0
margin_right = 1.0
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopWide" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_right = 1.0
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightWide" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomWide" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VCenterWide" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HCenterWide" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HCenterWide2" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Inner"]
self_modulate = Color( 1, 1, 1, 0.0980392 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -75.5
margin_right = 25.0
margin_bottom = 76.5
rect_min_size = Vector2( 1, 1 )
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlights" type="Control" parent="Panel/VBX/MiddlePart/FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft10" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Highlights"]
anchor_bottom = 1.0
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft11" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Highlights"]
anchor_right = 1.0
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft12" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Highlights"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft14" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Highlights"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft15" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Highlights"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft16" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/Highlights"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighlightsPoints" type="Control" parent="Panel/VBX/MiddlePart/FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
margin_right = 27.0
margin_bottom = 27.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft2" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -27.0
margin_bottom = 27.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft3" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -27.0
margin_right = 27.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft4" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
margin_top = -27.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft5" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -13.5
margin_right = 27.0
margin_bottom = 13.5
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft6" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -13.5
margin_right = 13.5
margin_bottom = 27.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft7" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -13.5
margin_bottom = 13.5
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft9" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -13.5
margin_top = -27.0
margin_right = 13.5
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft8" type="ColorRect" parent="Panel/VBX/MiddlePart/FullRect/HighlightsPoints"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -13.5
margin_right = 13.5
margin_bottom = 13.5
rect_min_size = Vector2( 27, 27 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modifier" type="Label" parent="Panel/VBX"]
modulate = Color( 1, 1, 1, 0.266667 )
margin_top = 175.0
margin_right = 134.0
margin_bottom = 215.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 40 )
text = "Shift: Anchors only"
align = 1
valign = 2

[node name="Control" type="Control" parent="Panel/VBX"]
margin_top = 219.0
margin_right = 134.0
margin_bottom = 224.087
rect_min_size = Vector2( 0, 5.087 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayoutPresetMode" type="OptionButton" parent="Panel/VBX"]
margin_top = 228.0
margin_right = 134.0
margin_bottom = 249.0
text = "Keep size"
items = [ "Minimum size", null, false, 0, null, "Keep width", null, false, 1, null, "Keep height", null, false, 2, null, "Keep size", null, false, 3, null ]
selected = 3

[node name="ButtonPanel" type="Panel" parent="."]
margin_left = -65.0
margin_top = 36.0
margin_right = -25.0
margin_bottom = 76.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnchorButton" type="TextureButton" parent="ButtonPanel"]
modulate = Color( 1, 0, 0, 0.529412 )
anchor_right = 1.0
anchor_bottom = 1.0
toggle_mode = true
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3
script = ExtResource( 6 )
normal_col = Color( 1, 1, 1, 0.0980392 )
hover_col = Color( 0.964706, 0.235294, 0.235294, 1 )

[node name="Editor" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="item_selected" from="Panel/VBX/LayoutPresetMode" to="Panel" method="_on_LayoutPresetMode_item_selected"]
[connection signal="toggled" from="ButtonPanel/AnchorButton" to="Panel" method="_on_AnchorButton_toggled"]
